# AMDMIGraphX

./: .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  hip-clang.docker
examples/cpp_api_inference/: CMakeLists.txt  mnist2.cpp
examples/gpen/: README.md  requirements.txt
examples/python_api_inference/: resnet50_inference.ipynb
examples/python_nfnet_inference/: nfnet_inference.ipynb  ort_comparison.py
src/: CMakeLists.txt  analyze_streams.cpp  argument.cpp  common.cpp  contiguous_reshape_input.cpp  cpp_generator.cpp  dead_code_elimination.cpp  dynamic_loader.cpp  eliminate_allocation.cpp  eliminate_concat.cpp  eliminate_data_type.cpp  eliminate_pad.cpp  env.cpp  file_buffer.cpp  files  fuse_pointwise.cpp  inline_module.cpp  insert_pad.cpp  instruction.cpp  json.cpp  load_save.cpp  module.cpp  msgpack.cpp  normalize_attributes.cpp  pass_manager.cpp  patch.patch  permutation.cpp  preallocate_param.cpp  program.cpp  quantization.cpp  quantize_int8.cpp  reduce_dims.cpp  rewrite_batchnorm.cpp  rewrite_pooling.cpp  rewrite_qdq.cpp  rewrite_rnn.cpp  schedule.cpp  shape.cpp  simplify_algebra.cpp  simplify_qdq.cpp  (+3 more)
src/api/: api.cpp  migraphx.py
src/driver/: CMakeLists.txt  alexnet.cpp  inceptionv3.cpp  main.cpp  models.hpp  resnet50.cpp  verify.cpp  verify.hpp
src/onnx/: checks.cpp  conv.cpp  onnx.cpp  onnx_parser.cpp  padding.cpp  parse_constant_fill.cpp  parse_constant_of_shape.cpp  parse_convolution.cpp  parse_deconvolution.cpp  parse_dequantizelinear.cpp  parse_expand.cpp  parse_gather_elements.cpp  parse_gemm.cpp  parse_generic_op.cpp  parse_gru.cpp  parse_if.cpp  parse_imagescalar.cpp  parse_loop.cpp  parse_lrn.cpp  parse_lstm.cpp  parse_matmul.cpp  parse_multinomial.cpp  parse_nonzero.cpp  parse_onehot.cpp  parse_pad.cpp  parse_pooling.cpp  parse_prefix_scan.cpp  parse_quantizelinear.cpp  parse_randomnormal_ops.cpp  parse_range.cpp  parse_reduce_op.cpp  parse_reshape.cpp  parse_resize.cpp  parse_rnn.cpp  parse_selu.cpp  parse_shape.cpp  parse_slice.cpp  parse_split.cpp  parse_thresholded_relu.cpp
src/opt/: memory_coloring_impl.cpp  memory_coloring_impl.hpp
src/py/: migraphx_py.cpp
src/tf/: parse_concat.cpp  parse_conv.cpp  parse_depthwiseconv.cpp  parse_expanddims.cpp  parse_onehot.cpp  parse_pack.cpp  parse_pad.cpp  parse_pooling.cpp  parse_shape.cpp  parse_slice.cpp  parse_squeeze.cpp  parse_stridedslice.cpp  tf_parser.cpp
test/: analyze_streams.cpp  auto_contiguous_test.cpp  eliminate_allocation_test.cpp  eliminate_concat_test.cpp  eliminate_pad_test.cpp  insert_pad_test.cpp  memory_coloring_test.cpp  msgpack.cpp  normalize_ops_test.cpp  op_shape_test.cpp  quantization.cpp  reduce_dims.cpp  ref_loop_test.cpp  ref_ops_test.cpp  ref_rnn_ops_test.cpp  run_loop_test.cpp  schedule_test.cpp  serialize_test.cpp  shape_test.cpp  simplify_algebra_test.cpp  simplify_reshapes_test.cpp
test/api/: test_cpu.cpp  test_custom_op.cpp  test_gpu.cpp  test_module_construct.cpp  test_tf_parser.cpp
test/gpu/: context_serialize.cpp  pack_args.cpp
test/include/: test.hpp
test/onnx/: gen_onnx.py  onnx_rnn_test.cpp  onnx_test.cpp  randomnormal_dtype_error_test.onnx  softmax_test.onnx  verify_onnx.cpp
test/py/: onnx_backend_test.py
test/tf/: tf_test.cpp
test/verify/: main.cpp  run_verify.cpp  test_add_gelu.cpp  test_conv3.cpp  (+65 more)
test_runner/: CMakeLists.txt  cmdline_options.cpp  cmdline_options.hpp  get_cases.cpp  get_cases.hpp  parse_tensor.cpp  parse_tensor.hpp  run_tests.hpp  test_runner.cpp
test_runner/python/: test_runner.py
tools/: api.py  roctx.py  roctx_parser.py  test_runner.py
(+177 files in other folders)
